--- a/Google雲端無紙化工作術-10702.html
+++ b/Google雲端無紙化工作術-10702.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="mobile-web-app-capable" content="yes">
     <title>
-        Google雲端無紙化工作術 - HackMD
+        Google雲端無紙化工作術 - 10702
     </title>
     <link rel="icon" type="image/png" href="https://hackmd.io/favicon.png">
     <link rel="apple-touch-icon" href="https://hackmd.io/apple-touch-icon.png">
