--- a/GitHub建立專案-10702.html
+++ b/GitHub建立專案-10702.html
@@ -37,7 +37,7 @@
 <body>
     <div id="doc" class="markdown-body container-fluid" style="position: relative;"><h1 id="GitHub建立專案"><a class="anchor hidden-xs" href="#GitHub建立專案" title="GitHub建立專案"><span class="octicon octicon-link"></span></a>GitHub建立專案</h1><h2 id="tags-台南社大10702-Google雲端無紙化工作術"><a class="anchor hidden-xs" href="#tags-台南社大10702-Google雲端無紙化工作術" title="tags-台南社大10702-Google雲端無紙化工作術"><span class="octicon octicon-link"></span></a>tags: <code>台南社大10702</code> <code>Google雲端無紙化工作術</code></h2><ol>
 <li>課程網址：<a href="http://ccs.tncomu.tw/modules/ccs_course/index.php?op=view_course&amp;course_sn=7198" target="_blank">http://ccs.tncomu.tw/modules/ccs_course/index.php?op=view_course&amp;course_sn=7198</a></li>
-<li>正式上課會帶學員申請GitHub帳號，vs code設定與Git操作3.</li>
+<li>正式上課會帶學員申請GitHub帳號，vs code設定與Git操作</li>
 </ol><h2 id="建立專案"><a class="anchor hidden-xs" href="#建立專案" title="建立專案"><span class="octicon octicon-link"></span></a>建立專案</h2><ol>
 <li>
 <p>點擊「New Repository」<br>
