--- a/台南社大體驗課-10702.html
+++ b/台南社大體驗課-10702.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="mobile-web-app-capable" content="yes">
     <title>
-        台南社大體驗課-10702 - HackMD
+        台南社大體驗課-10702 - 育將電腦工作室
     </title>
     <link rel="icon" type="image/png" href="https://hackmd.io/favicon.png">
     <link rel="apple-touch-icon" href="https://hackmd.io/apple-touch-icon.png">
