台南社大體驗課-10702

--- a/台南社大體驗課-10702.html
+++ b/台南社大體驗課-10702.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -39,6 +38,7 @@
 <li>時間：19:30 - 21:00</li>
 <li>地點：台南市後甲國中 台南市東區林森路二段260號</li>
 <li>體驗課：90分鐘</li>
+<li>報名：<a href="http://tncomu.tw/modules/tadnews/index.php?nsn=3633" target="_blank">(序12)8/23(四) 19:30 GOOLE雲端/網頁開發(後甲)</a></li>
 </ol><h2 id="Google雲端無紙化工作術"><a class="anchor hidden-xs" href="#Google雲端無紙化工作術" title="Google雲端無紙化工作術"><span class="octicon octicon-link"></span></a><a href="http://ccs.tncomu.tw/modules/ccs_course/index.php?op=view_course&amp;course_sn=7198" target="_blank">Google雲端無紙化工作術</a></h2><p><img src="https://i.imgur.com/a4DaE4E.jpg" alt=""></p><ol>
 <li>本課程為雲端工具整合運用課程</li>
 <li>舉凡公司管理、工廠管理、生活大小事管理都適用</li>
